# SDL_graphs

./: .gitignore  CMakeLists.txt  CMakeListsold.txt  LICENSE  README.md  main.c  sdl_graphs.c  sdl_graphs.h
examples/: grid.c  main.c  multi_subplot.c  multi_subplot_w_toolbar.c  multi_toolbar.c  scatter_plot.c  simple.c  simple3d.c  simple_toolbar.c
include/: sdl_graphs.h  sdl_toolbar.h
src/: sdl_graphs.c  sdl_toolbar.c
